Templates/nsg.template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name": {
      "defaultValue": "NRMS-wxpfu5yltf26gmospopvnet",
      "type": "String"
    },
    "resource_location": {
      "defaultValue": "[resourceGroup().location]",
      "type": "String"
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-11-01",
      "name": "[parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name')]",
      "location": "[parameters('resource_location')]",
      "tags": {
        "Creator": "Automatically added by NRMS Azure Policy",
        "NRMS-Info": "http://aka.ms/nrms",
        "NRMS-Version": "2019-03-20"
      },
      "properties": {
        "securityRules": [
          {
            "name": "NRMS-Rule-103",
            "properties": {
              "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "CorpNetPublic",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 103,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "NRMS-Rule-106",
            "properties": {
              "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 106,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "22",
                "3389"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "NRMS-Rule-107",
            "properties": {
              "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 107,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "23",
                "135",
                "445",
                "5985",
                "5986"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "NRMS-Rule-104",
            "properties": {
              "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "CorpNetSaw",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 104,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "NRMS-Rule-101",
            "properties": {
              "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "NRMS-Rule-105",
            "properties": {
              "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 105,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "1433",
                "1434",
                "3306",
                "4333",
                "5432",
                "6379",
                "7000",
                "7001",
                "7199",
                "9042",
                "9160",
                "9300",
                "16379",
                "26379",
                "27017"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "NRMS-Rule-109",
            "properties": {
              "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 109,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "119",
                "137",
                "138",
                "139",
                "161",
                "162",
                "389",
                "636",
                "2049",
                "2301",
                "2381",
                "3268",
                "5800",
                "5900"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "NRMS-Rule-108",
            "properties": {
              "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 108,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "13",
                "17",
                "19",
                "53",
                "69",
                "111",
                "123",
                "512",
                "514",
                "593",
                "873",
                "1900",
                "5353",
                "11211"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[concat(parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'), '/NRMS-Rule-101')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'))]"
      ],
      "properties": {
        "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 101,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[concat(parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'), '/NRMS-Rule-103')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'))]"
      ],
      "properties": {
        "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "*",
        "sourceAddressPrefix": "CorpNetPublic",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 103,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[concat(parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'), '/NRMS-Rule-104')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'))]"
      ],
      "properties": {
        "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "*",
        "sourceAddressPrefix": "CorpNetSaw",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 104,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[concat(parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'), '/NRMS-Rule-105')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'))]"
      ],
      "properties": {
        "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
        "protocol": "*",
        "sourcePortRange": "*",
        "sourceAddressPrefix": "Internet",
        "destinationAddressPrefix": "*",
        "access": "Deny",
        "priority": 105,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [
          "1433",
          "1434",
          "3306",
          "4333",
          "5432",
          "6379",
          "7000",
          "7001",
          "7199",
          "9042",
          "9160",
          "9300",
          "16379",
          "26379",
          "27017"
        ],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[concat(parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'), '/NRMS-Rule-106')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'))]"
      ],
      "properties": {
        "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "sourceAddressPrefix": "Internet",
        "destinationAddressPrefix": "*",
        "access": "Deny",
        "priority": 106,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [
          "22",
          "3389"
        ],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[concat(parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'), '/NRMS-Rule-107')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'))]"
      ],
      "properties": {
        "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "sourceAddressPrefix": "Internet",
        "destinationAddressPrefix": "*",
        "access": "Deny",
        "priority": 107,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [
          "23",
          "135",
          "445",
          "5985",
          "5986"
        ],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[concat(parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'), '/NRMS-Rule-108')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'))]"
      ],
      "properties": {
        "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
        "protocol": "*",
        "sourcePortRange": "*",
        "sourceAddressPrefix": "Internet",
        "destinationAddressPrefix": "*",
        "access": "Deny",
        "priority": 108,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [
          "13",
          "17",
          "19",
          "53",
          "69",
          "111",
          "123",
          "512",
          "514",
          "593",
          "873",
          "1900",
          "5353",
          "11211"
        ],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2020-11-01",
      "name": "[concat(parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'), '/NRMS-Rule-109')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NRMS_wxpfu5yltf26gmospopvnet_name'))]"
      ],
      "properties": {
        "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
        "protocol": "*",
        "sourcePortRange": "*",
        "sourceAddressPrefix": "Internet",
        "destinationAddressPrefix": "*",
        "access": "Deny",
        "priority": 109,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [
          "119",
          "137",
          "138",
          "139",
          "161",
          "162",
          "389",
          "636",
          "2049",
          "2301",
          "2381",
          "3268",
          "5800",
          "5900"
        ],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    }
  ]
}
